--- a/foodapp/static/css/imperial_style.css
+++ b/foodapp/static/css/imperial_style.css
@@ -123,7 +123,7 @@ header{
  /* ------------- Banner ------------- */
 
  #banner {
-    background-image: url("../images/rvce_canteen.png");
+    background-image: url("../images/canteen_pic.png");
     width: 100%;
     height: 100vh;
     opacity: 1;
