--- a/Templates/foodapp/index.html
+++ b/Templates/foodapp/index.html
@@ -90,13 +90,15 @@
     </nav>
 
     <main>
-      <div id="banner">
-        <div id="banner-text">
+      <div id="main"></div>
+      <!-- <div id="banner"> -->
+        <!-- <img src="{% static 'images/canteen_pic.png' %}" alt="" style="width: 100%; height: 50%"> -->
+        <!-- <div id="banner-text"> -->
             <!-- <h1>Mingos</h1>
             <p>Find your delicious hot food!</p>
              -->
-        </div>
-    </div>
+        <!-- </div>   -->
+    <!-- </div> -->
     <!-- <div id="section-2">
         <p id="heading">Fresh Food</p>
         <h3>Our Restaurant !</h3>
@@ -124,7 +126,7 @@
             </div>
         </div>
     </div> -->
-    <div style="padding: 20px;">
+    <div style="padding: 20px;"style="width: 60%; height: 50%">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -144,31 +146,31 @@
                 <img class="d-block w-20" src="{% static 'images/a.jpeg' %}" alt="First slide" style="height: 30%;">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-20" src="{% static 'images/b.jpeg' %}" alt="Second slide">
+                <img class="d-block w-20" src="{% static 'images/b.jpeg' %}" alt="Second slide"style="height: 30%;">
               </div>  
               <div class="carousel-item">
-                <img class="d-block w-20" src="{% static 'images/c.jpeg' %}" alt="Third slide">
+                <img class="d-block w-20" src="{% static 'images/c.jpeg' %}" alt="Third slide"style="height: 30%;">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-20" src="{% static 'images/d.jpeg' %}" alt="Fourth slide">
+                <img class="d-block w-20" src="{% static 'images/d.jpeg' %}" alt="Fourth slide"style="height: 30%;">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-20" src="{% static 'images/e.jpeg' %}" alt="5th slide">
+                <img class="d-block w-20" src="{% static 'images/e.jpeg' %}" alt="5th slide"style="height: 20%;">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-20" src="{% static 'images/f.jpeg' %}" alt="6th slide">
+                <img class="d-block w-20" src="{% static 'images/f.jpeg' %}" alt="6th slide"style="height: 20%;">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-20" src="{% static 'images/g.jpeg' %}" alt="7th slide">
+                <img class="d-block w-20" src="{% static 'images/g.jpeg' %}" alt="7th slide"style="height: 20%;">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-20" src="{% static 'images/h.jpeg' %}" alt="8th slide">
+                <img class="d-block w-20" src="{% static 'images/h.jpeg' %}" alt="8th slide"style="height: 20%;">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-20" src="{% static 'images/i.jpeg' %}" alt="9th slide">
+                <img class="d-block w-20" src="{% static 'images/i.jpeg' %}" alt="9th slide"style="height: 20%;">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-20" src="{% static 'images/j.jpeg' %}" alt="10th slide">
+                <img class="d-block w-20" src="{% static 'images/j.jpeg' %}" alt="10th slide"style="height: 20%;">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
