--- a/Templates/foodapp/displaySandwichRoll.html
+++ b/Templates/foodapp/displaySandwichRoll.html
@@ -52,7 +52,6 @@
         <div class="container">
           <nav class="navbar navbar-expand-lg custom_nav-container">
             <a class="navbar-brand" href="index.html">
-              <span> Feane </span>
             </a>
 
             <button
@@ -167,10 +166,19 @@
 
         <ul class="filters_menu">
           <li class="active" data-filter="*">All</li>
-          <li data-filter=".burger">Burger</li>
-          <li data-filter=".pizza">Pizza</li>
-          <li data-filter=".pasta">Pasta</li>
-          <li data-filter=".fries">Fries</li>
+          <li data-filter=".North Indian">North Indian</li>
+          <li data-filter=".North thali">North thali</li>
+          <li data-filter=".Pasta">Pasta</li>
+          <li data-filter=".Beverages">Beverages</li>
+          <li data-filter=".South thali">South thali</li>
+          <li data-filter=".Dosa">Dosa</li>
+          <li data-filter=".Sandwich">Sandwich</li>
+          <li data-filter=".Rolls">Rolls</li>
+          <li data-filter=".Chinese">Chinese</li>
+          <li data-filter=".Extra">Extra</li>
+          <li data-filter=".Quick bites">Quick bites</li>
+          <li data-filter=".Chats">Chaats</li>
+          <li data-filter=".Ice cream">Ice cream</li>
         </ul>
 
         <div class="filters-content">
@@ -262,7 +270,6 @@
                       quisquam velit, magnam voluptatem repellendus sed eaque
                     </p>
                     <div class="options">
-                      <h6>$15</h6>
                       <a href="">
                         <svg
                           version="1.1"
