--- a/Templates/foodapp/index.html
+++ b/Templates/foodapp/index.html
@@ -19,6 +19,22 @@
 
     <title>Mingos | Home</title>
 	<link rel="icon" href="{% static 'images/favicon.ico' %}">
+        <!-- bootstrap css -->
+        <link rel="stylesheet" type="text/css" href="{ % static 'css/bootstrap.min.css'%}">
+        <!-- style css -->
+        <link rel="stylesheet" type="text/css" href="{ % static 'css/styless.css'%}">
+        <!-- Responsive-->
+        <link rel="stylesheet" href="{ % static 'css/responsiveness.css'%}">
+        <!-- fevicon -->
+        <link rel="icon" href="{%static 'images/fevicon.png'%}" type="image/gif" />
+        <!-- Scrollbar Custom CSS -->
+        <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+        <!-- Tweaks for older IEs-->
+        <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+        <!-- owl stylesheets --> 
+        <link rel="stylesheet" href="css/owl.carousel.min.css">
+        <link rel="stylesheet" href="css/owl.theme.default.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
   </head>
     <nav class="navbar navbar-expand-lg navbar-light" style="position: fixed;width:100%;background-image: linear-gradient(180deg,#FFF,#FFF);box-shadow: 0px 0px 7px 0px #404040;">
       <link rel="icon" href="../" />
@@ -90,7 +106,108 @@
     </nav>
 
     <main>
-      <div id="main"></div>
+     <!-- banner section start -->
+     <div class="banner_section layout_padding">
+        <div class="container">
+           <div id="my_slider" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                 <div class="carousel-item active">
+                    <div class="row">
+                       <div class="col-md-6">
+                          <div class="container">
+                             <h1 class="banner_taital">Get Medical Care early</h1>
+                             <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                             <div class="more_bt"><a href="#">Read More</a></div>
+                          </div>
+                       </div>
+                       <div class="col-md-6">
+                          <div class="banner_img"><img src="{ % static 'images/banner-img.png'%}"></div>
+                       </div>
+                    </div>
+                 </div>
+                 <div class="carousel-item">
+                    <div class="row">
+                       <div class="col-md-6">
+                          <div class="container">
+                             <h1 class="banner_taital">Get Medical Care early</h1>
+                             <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                             <div class="more_bt"><a href="#">Read More</a></div>
+                          </div>
+                       </div>
+                       <div class="col-md-6">
+                          <div class="banner_img"><img src="{ % static 'images/banner-img.png'%}"></div>
+                       </div>
+                    </div>
+                 </div>
+                 <div class="carousel-item">
+                    <div class="row">
+                       <div class="col-md-6">
+                          <div class="container">
+                             <h1 class="banner_taital">Get Medical Care early</h1>
+                             <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                             <div class="more_bt"><a href="#">Read More</a></div>
+                          </div>
+                       </div>
+                       <div class="col-md-6">
+                          <div class="banner_img"><img src="{ % static 'images/banner-img.png'%}"></div>
+                       </div>
+                    </div>
+                 </div>
+              </div>
+              <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
+              <i class="fa fa-angle-left"></i>
+              </a>
+              <a class="carousel-control-next" href="#my_slider" role="button" data-slide="next">
+              <i class="fa fa-angle-right"></i>
+              </a>
+           </div>
+        </div>            
+     </div>
+     <!-- banner section end -->
+     </div>
+     <!-- header section end -->
+     <!-- protect section start -->
+     <div class="protect_section layout_padding">
+        <div class="container">
+           <div class="row">
+              <div class="col-sm-12">
+                 <h1 class="protect_taital">How to Protect Yourself</h1>
+                 <p class="protect_text">English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for</p>
+              </div>
+           </div>
+           <div class="protect_section_2 layout_padding">
+              <div class="row">
+                 <div class="col-md-6">
+                    <h1 class="hands_text"><a href="#">Wash your <br>hands frequently</a></h1>
+                    <h1 class="hands_text_2"><a href="#">Maintain social <br>distancing</a></h1>
+                    <h1 class="hands_text"><a href="#">Avoid touching eyes,<br>nose and mouth</a></h1>
+                 </div>
+                 <div class="col-md-6">
+                    <div class="image_2"><img src="{ % static 'images/img-2.png'%}"></div>
+                 </div>
+              </div>
+           </div>
+        </div>
+     </div>
+     <!-- protect section end -->
+     <!-- about section start -->
+     <div class="about_section layout_padding">
+        <div class="container">
+           <div class="row">
+              <div class="col-md-6">
+                 <div class="about_img"><img src="{ % static 'images/img-1.png'%}"></div>
+              </div>
+              <div class="col-md-6">
+                 <h1 class="about_taital">Coronavirus what it is?</span></h1>
+                 <p class="about_text">when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+                 <div class="read_bt"><a href="#">Read More</a></div>
+              </div>
+           </div>
+        </div>
+     </div>
+     <!-- about section end -->
+
+
       <!-- <div id="banner"> -->
         <!-- <img src="{% static 'images/canteen_pic.png' %}" alt="" style="width: 100%; height: 50%"> -->
         <!-- <div id="banner-text"> -->
