--- a/Templates/foodapp/index.html
+++ b/Templates/foodapp/index.html
@@ -121,7 +121,8 @@
                           </div>
                        </div>
                        <div class="col-md-6">
-                          <div class="banner_img"><img src="{ % static 'images/banner-img.png'%}"></div>
+                          <div class="banner_img"><img src="{% static 'images/a.jpeg' %}" style=    "width: 80%;
+                            text-align: center;"></div>
                        </div>
                     </div>
                  </div>
@@ -135,7 +136,8 @@
                           </div>
                        </div>
                        <div class="col-md-6">
-                          <div class="banner_img"><img src="{ % static 'images/banner-img.png'%}"></div>
+                          <div class="banner_img"><img src="{% static 'images/b.jpeg' %}" style=    "width: 80%;
+                            text-align: center;"></div>
                        </div>
                     </div>
                  </div>
@@ -149,11 +151,124 @@
                           </div>
                        </div>
                        <div class="col-md-6">
-                          <div class="banner_img"><img src="{ % static 'images/banner-img.png'%}"></div>
+                          <div class="banner_img"><img src="{% static 'images/c.jpeg' %}" style=    "width: 80%;
+                            text-align: center;"></div>
                        </div>
                     </div>
                  </div>
               </div>
+              <div class="carousel-item">
+                <div class="row">
+                   <div class="col-md-6">
+                      <div class="container">
+                         <h1 class="banner_taital">Get Medical Care early</h1>
+                         <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                         <div class="more_bt"><a href="#">Read More</a></div>
+                      </div>
+                   </div>
+                   <div class="col-md-6">
+                      <div class="banner_img"><img src="{% static 'images/d.jpeg' %}" style=    "width: 80%;
+                        text-align: center;"></div>
+                   </div>
+                </div>
+             </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row">
+               <div class="col-md-6">
+                  <div class="container">
+                     <h1 class="banner_taital">Get Medical Care early</h1>
+                     <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                     <div class="more_bt"><a href="#">Read More</a></div>
+                  </div>
+               </div>
+               <div class="col-md-6">
+                  <div class="banner_img"><img src="{% static 'images/e.jpeg' %}" style=    "width: 80%;
+                    text-align: center;"></div>
+               </div>
+            </div>
+         </div>
+         <div class="carousel-item">
+          <div class="row">
+             <div class="col-md-6">
+                <div class="container">
+                   <h1 class="banner_taital">Get Medical Care early</h1>
+                   <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                   <div class="more_bt"><a href="#">Read More</a></div>
+                </div>
+             </div>
+             <div class="col-md-6">
+                <div class="banner_img"><img src="{% static 'images/f.jpeg' %}" style=    "width: 80%;
+                  text-align: center;"></div>
+             </div>
+          </div>
+       </div>
+    </div>
+    <div class="carousel-item">
+      <div class="row">
+         <div class="col-md-6">
+            <div class="container">
+               <h1 class="banner_taital">Get Medical Care early</h1>
+               <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+               <div class="more_bt"><a href="#">Read More</a></div>
+            </div>
+         </div>
+         <div class="col-md-6">
+            <div class="banner_img"><img src="{% static 'images/g.jpeg' %}" style=    "width: 80%;
+              text-align: center;"></div>
+         </div>
+      </div>
+   </div>
+</div>
+<div class="carousel-item">
+  <div class="row">
+     <div class="col-md-6">
+        <div class="container">
+           <h1 class="banner_taital">Get Medical Care early</h1>
+           <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+           <div class="more_bt"><a href="#">Read More</a></div>
+        </div>
+     </div>
+     <div class="col-md-6">
+        <div class="banner_img"><img src="{% static 'images/h.jpeg' %}" style=    "width: 80%;
+          text-align: center;"></div>
+     </div>
+  </div>
+</div>
+</div>
+<div class="carousel-item">
+  <div class="row">
+     <div class="col-md-6">
+        <div class="container">
+           <h1 class="banner_taital">Get Medical Care early</h1>
+           <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+           <div class="more_bt"><a href="#">Read More</a></div>
+        </div>
+     </div>
+     <div class="col-md-6">
+        <div class="banner_img"><img src="{% static 'images/i.jpeg' %}" style=    "width: 80%;
+          text-align: center;"></div>
+     </div>
+  </div>
+</div>
+</div>
+<div class="carousel-item">
+  <div class="row">
+     <div class="col-md-6">
+        <div class="container">
+           <h1 class="banner_taital">Get Medical Care early</h1>
+           <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+           <div class="more_bt"><a href="#">Read More</a></div>
+        </div>
+     </div>
+     <div class="col-md-6">
+        <div class="banner_img"><img src="{% static 'images/j.jpeg' %}" style=    "width: 80%;
+          text-align: center;"></div>
+     </div>
+  </div>
+</div>
+</div>
+      </div>
               <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
               <i class="fa fa-angle-left"></i>
               </a>
@@ -173,6 +288,18 @@
               <div class="col-sm-12">
                  <h1 class="protect_taital">How to Protect Yourself</h1>
                  <p class="protect_text">English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for</p>
+              </div>
+           </div>
+           <div class="protect_section_2 layout_padding">
+              <div class="row">
+                 <div class="col-md-6">
+                    <h1 class="hands_text"><a href="#">Wash your <br>hands frequently</a></h1>
+                    <h1 class="hands_text_2"><a href="#">Maintain social <br>distancing</a></h1>
+                    <h1 class="hands_text"><a href="#">Avoid touching eyes,<br>nose and mouth</a></h1>
+                 </div>
+                 <div class="col-md-6">
+                    <div class="image_2"><img src="{ % static 'images/img-2.png'%}"></div>
+                 </div>
               </div>
            </div>
            <div class="protect_section_2 layout_padding">
