--- a/Templates/foodapp/addcust.html
+++ b/Templates/foodapp/addcust.html
@@ -115,8 +115,8 @@ Company:	Collins-Harris<br />
 Address	40 Tik Keung New Village Yik Ngoi Yai New Territories
         </div>
       </div><hr style="background-color: grey;margin-top:0px;"/>Made with HTML5 & CSS.<br />
-      Made by Certified <b>PPS Friends</b> an RAR Group's.<br />
-      ©<script type='text/javascript'>var creditsyear = new Date();document.write(creditsyear.getFullYear());</script> <a class="ext-link" href="/"><b>Mingos</b></a> All Rights Reserved | RAR Group's
+      Made by Certified <b>Santosh Nisarga Keerthana<br />
+      ©<script type='text/javascript'>var creditsyear = new Date();document.write(creditsyear.getFullYear());</script> <a class="ext-link" href="/"><b>Mingos</b></a> All Rights Reserved 
     </footer>
   </body>
 </html>
