--- a/Templates/foodapp/index.html
+++ b/Templates/foodapp/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{% static 'css/imperial_style.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/master.css' %}" />
+    
     <link href="https://fonts.googleapis.com/css?family=Caveat:700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bevan&display=swap" rel="stylesheet">
@@ -429,7 +430,7 @@
           </div>
         </div>
     </main>
-    <footer style="
+    <!-- <footer style="
     padding-top: 0px;
     margin-top: 0px;
 ">
@@ -451,5 +452,15 @@ Bangalore
         </div>
       </div><hr style="background-color: grey;margin-top:0px;"/><br />
       Made by Nisarga <b>Santhosh</b> Keerthana<br />
-      ©<script type='text/javascript'>var creditsyear = new Date();document.write(creditsyear.getFullYear());</script> <a class="ext-link" href="/"><b>Mingos</b></a> All Rights Reserved | RVCE
+      ©<script type='text/javascript'>var creditsyear = new Date();document.write(creditsyear.getFullYear());</script> <a class="ext-link" href="/"><b>Mingos</b></a> All Rights Reserved | RVCE -->
+       <div class="footer">
+         <div id="button"></div>
+       <div id="container">
+       <div id="cont">
+       <div class="footer_center">
+             <h3>Classy footer text</h3>
+       </div>
+       </div>
+       </div>
+       </div>
 </html>
