--- a/Templates/foodapp/updatecust.html
+++ b/Templates/foodapp/updatecust.html
@@ -183,7 +183,7 @@
                             <h2 class="wow fadeInUp" data-wow-delay="0.2s">Find us</h2>
                         </div>
                         <address class="wow fadeInUp" data-wow-delay="0.4s">
-                            <p>123, pragati college,Datta Nagar<br>Dombivali East</p>
+                            <p>RVCE<br>Mysore Road, Bangalore</p>
                         </address>
                     </div>
                 </div>
@@ -193,9 +193,7 @@
                             <h2 class="wow fadeInUp" data-wow-delay="0.2s">Reservation</h2>
                         </div>
                         <address class="wow fadeInUp" data-wow-delay="0.4s">
-                            <p>+919876543210 | +919876543210</p>
                             <p><a href="mailto:cmdzinc@gmail.com">info@Mingos.com</a></p>
-                            <p>Telegram:@Heroofswarg </p>
                         </address>
                     </div>
                 </div>
@@ -205,14 +203,12 @@
                             <h2 class="wow fadeInUp" data-wow-delay="0.2s">Open Hours</h2>
                         </div>
                         <div class="wow fadeInUp" data-wow-delay="0.4s">
-                            <p>Monday: Closed</p>
+                            <p>Sunday: Closed</p>
                             <div>
-                                <strong>Tuesday to Sunday</strong>
-                                <p>7:00 AM - 9:00 PM</p>
+                                <strong>Monday to Saturday</strong>
+                                <p>9:00 AM - 7:00 PM</p>
                             </div>
                             <div>
-                                <strong>Saturday - Sunday</strong>
-                                <p>11:00 AM - 12:00 PM</p>
                             </div>
                         </div>
                     </div>
@@ -225,8 +221,7 @@
                         <li><a href="#" class="fa fa-google"></a></li>
                     </ul>
                     <div class="wow fadeInUp copyright-text" data-wow-delay="0.8s">
-                        <p><br>Copyright &copy; 2020 <br>Mingos.com
-                            <br><br>Design By: <a rel="nofollow" href="#">RAR Group</a></p>
+                        <p><br>Copyright &copy; 2020 <br>Mingos.com</p>
                     </div>
                 </div>
             </div>
