--- a/foodapp/static/css/imperial_style.css
+++ b/foodapp/static/css/imperial_style.css
@@ -1,5 +1,5 @@
 { % load static % }
-
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400);
 *{
   margin: 0;
   padding: 0;
@@ -569,7 +569,7 @@ header{
   
   /* ---------end food section-------- */
 /*------------Footer----------------*/
-
+/* 
 footer {
   margin-top: 10px;
     padding-top: 15px;
@@ -595,7 +595,7 @@ footer {
   font-size: 30px;
   font-weight: normal;
   /* color: ; */
-  font-family: 'Bevan', cursive;
+  /* font-family: 'Bevan', cursive;
   overflow: hidden;
 }
 .fo-cont-2{
@@ -604,7 +604,7 @@ footer {
   font-size: 12px;
   text-align: center;
   font-weight: normal;
-  /* color: ; */
+  /* color: ; 
   font-family: 'Ultra', serif;
   overflow: hidden;
 }
@@ -621,6 +621,83 @@ footer {
         font-size: 10px;
         padding: 10px 0;
     }
+} */ 
+
+.footer #button{
+	width:35px;
+	height:35px;
+	border: #727172 12px solid;
+	border-radius:35px;
+	margin:0 auto;
+	position:relative;
+	-webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+}
+.footer #button:hover{
+	width:35px;
+	height:35px;
+	border: #3A3A3A 12px solid;
+	-webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+	position:relative;
+}
+.footer {
+	bottom:0;
+	left:0;
+	position:fixed;
+    width: 100%;
+    height: 2em;
+    overflow:hidden;
+    margin:0 auto;
+	-webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+	z-index:999;
+}
+.footer:hover {
+	-webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+	height: 10em;
+}
+.footer #container{
+	margin-top:5px;
+	width:100%;
+height:100%;
+  position:relative;
+  top:0;
+  left:0;
+	background: #3A3A3A;
+}
+.footer #cont{
+  position:relative;
+  top:-45px;
+  right:190px;
+	width:150px;
+	height:auto;
+	margin:0 auto;
+}
+.footer_center{
+	width:500px;
+	float:left;
+  text-align:center;
+}
+.footer h3{
+	font-family: 'Helvetica';
+	font-size: 30px;
+	font-weight: 100;
+	margin-top:70px;
+	margin-left:40px;
 }
 /* ------------------------- */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap");
@@ -723,3 +800,6 @@ body {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    border-radius: 10px;
 }
+
+
+
