--- a/Templates/foodapp/index.html
+++ b/Templates/foodapp/index.html
@@ -14,11 +14,240 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+<style>--------------------------------------------------------------
+
+   --------------------------------------------------------------*/
+   .about .about-img {
+     min-height: 500px;
+   }
+   
+   .about h3 {
+     font-weight: 700;
+     font-size: 36px;
+     margin-bottom: 30px;
+     font-family: var(--font-secondary);
+   }
+   
+   .about .call-us {
+     left: 10%;
+     right: 10%;
+     bottom: 10%;
+     background-color: #fff;
+     box-shadow: 0px 2px 25px rgba(0, 0, 0, 0.08);
+     padding: 20px;
+     text-align: center;
+   }
+   
+   .about .call-us h4 {
+     font-size: 24px;
+     font-weight: 700;
+     margin-bottom: 5px;
+     font-family: var(--font-default);
+   }
+   
+   .about .call-us p {
+     font-size: 28px;
+     font-weight: 700;
+     color: var(--color-primary);
+   }
+   
+   .about .content ul {
+     list-style: none;
+     padding: 0;
+   }
+   
+   .about .content ul li {
+     padding: 0 0 8px 26px;
+     position: relative;
+   }
+   
+   .about .content ul i {
+     position: absolute;
+     font-size: 20px;
+     left: 0;
+     top: -3px;
+     color: var(--color-primary);
+   }
+   
+   .about .content p:last-child {
+     margin-bottom: 0;
+   }
+   
+   .about .play-btn {
+     width: 94px;
+     height: 94px;
+     background: radial-gradient(var(--color-primary) 50%, rgba(206, 18, 18, 0.4) 52%);
+     border-radius: 50%;
+     display: block;
+     position: absolute;
+     left: calc(50% - 47px);
+     top: calc(50% - 47px);
+     overflow: hidden;
+   }
+   
+   .about .play-btn:before {
+     content: "";
+     position: absolute;
+     width: 120px;
+     height: 120px;
+     animation-delay: 0s;
+     animation: pulsate-btn 2s;
+     animation-direction: forwards;
+     animation-iteration-count: infinite;
+     animation-timing-function: steps;
+     opacity: 1;
+     border-radius: 50%;
+     border: 5px solid rgba(206, 18, 18, 0.7);
+     top: -15%;
+     left: -15%;
+     background: rgba(198, 16, 0, 0);
+   }
+   
+   .about .play-btn:after {
+     content: "";
+     position: absolute;
+     left: 50%;
+     top: 50%;
+     transform: translateX(-40%) translateY(-50%);
+     width: 0;
+     height: 0;
+     border-top: 10px solid transparent;
+     border-bottom: 10px solid transparent;
+     border-left: 15px solid #fff;
+     z-index: 100;
+     transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+   }
+   
+   .about .play-btn:hover:before {
+     content: "";
+     position: absolute;
+     left: 50%;
+     top: 50%;
+     transform: translateX(-40%) translateY(-50%);
+     width: 0;
+     height: 0;
+     border: none;
+     border-top: 10px solid transparent;
+     border-bottom: 10px solid transparent;
+     border-left: 15px solid #fff;
+     z-index: 200;
+     animation: none;
+     border-radius: 0;
+   }
+   
+   .about .play-btn:hover:after {
+     border-left: 15px solid var(--color-primary);
+     transform: scale(20);
+   }
+   
+   @keyframes pulsate-btn {
+     0% {
+       transform: scale(0.6, 0.6);
+       opacity: 1;
+     }
+   
+     100% {
+       transform: scale(1, 1);
+       opacity: 0;
+     }
+   }</style>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
     <title>Mingos | Home</title>
+    <style>/* banner section start */
+
+      .banner_section {
+          width: 100%;
+          float: left;
+          padding-bottom: 80px;
+      }
+      
+      .banner_img {
+          width: 80%;
+          text-align: center;
+      }
+      
+      .banner_taital {
+          width: 100%;
+          float: left;
+          font-size: 60px;
+          color: #fef6fc;
+          font-weight: bold;
+          line-height: 50px;
+          padding-top: 30px;
+      }
+      
+      .banner_text {
+          width: 80%;
+          float: left;
+          font-size: 16px;
+          color: #fef6fc;
+          margin: 20px 0px 0px 0px;
+      }
+      
+      .more_bt {
+          width: 150px;
+          float: left;
+          margin-top: 30px;
+      }
+      
+      .more_bt a {
+          width: 100%;
+          float: left;
+          font-size: 16px;
+          color: #ffffff;
+          background-color: #a258ed;
+          text-align: center;
+          padding: 10px 0px;
+          border-radius: 40px;
+          text-transform: uppercase;
+      }
+      
+      .more_bt a:hover {
+          color: #ffffff;
+          background-color: #3674f2;
+      }
+      
+      #my_slider a.carousel-control-prev {
+          /* position: absolute; */
+          left: -60px;
+          right: 0px;
+          top: 118%;
+      }
+      
+      #my_slider a.carousel-control-next {
+          /* position: absolute; */
+          left: 0px;
+          right: -60px;
+          top: 118%;
+      
+      }
+      
+      #my_slider .carousel-control-prev, 
+      #my_slider .carousel-control-next {
+          width: 55px;
+          height: 55px;
+          background: #ffffff;
+          opacity: 1;
+          font-size: 30px;
+          color: #000;
+          border-radius: 100%;
+          margin: 0 auto;
+          box-shadow: 0px 0px 5px 0px;
+      }
+      
+      #my_slider .carousel-control-prev:hover,
+      #my_slider .carousel-control-next:hover,
+      #my_slider .carousel-control-prev:focus,
+      #my_slider .carousel-control-next:focus {
+          background: #a258ed;
+          color: #ffffff;
+      }
+   
+      
+      /* banner section end */</style>
 	<link rel="icon" href="{% static 'images/favicon.ico' %}">
         <!-- bootstrap css -->
         <link rel="stylesheet" type="text/css" href="{ % static 'css/bootstrap.min.css'%}">
@@ -29,12 +258,10 @@
         <!-- fevicon -->
         <link rel="icon" href="{%static 'images/fevicon.png'%}" type="image/gif" />
         <!-- Scrollbar Custom CSS -->
-        <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
         <!-- Tweaks for older IEs-->
         <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
         <!-- owl stylesheets --> 
-        <link rel="stylesheet" href="css/owl.carousel.min.css">
-        <link rel="stylesheet" href="css/owl.theme.default.min.css">
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
   </head>
     <nav class="navbar navbar-expand-lg navbar-light" style="position: fixed;width:100%;background-image: linear-gradient(180deg,#FFF,#FFF);box-shadow: 0px 0px 7px 0px #404040;">
@@ -107,7 +334,10 @@
     </nav>
 
     <main>
-      <div id="banner">
+    </br>
+
+    <div id="starting_ban"> 
+    </br></br>
          <div id="my_slider" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                <div class="carousel-item active">
@@ -265,32 +495,42 @@
         text-align: center;"></div>
    </div>
 </div>
+</div>
+        </div>
+         <!-- ======= About Section ======= -->
+    <section id="about" class="about" style="background-image: url(../../foodapp/static/images/canteen_pic.png);">
+      <div class="container">
+
+        <div class="section-header">
+          <h2>About Us</h2>
+          <p>Learn More <span>About Us</span></p>
+        </div>
+          
+        <div class="row gy-4">
+          <!-- <img src="../../foodapp/static/images/canteen_pic.png" class="img-fluid" alt=""> -->
+          <div class="col-lg-7 position-relative about-img" data-aos="fade-up" data-aos-delay="150">
+            <div class="call-us position-absolute">
+              <h4>Book a Table</h4>
+              <p>+91 9686566801</p>
+            </div>
+          </div>
+          <div class="col-lg-5 d-flex align-items-end" >
+            <div class="content ps-0 ps-lg-5">
+              <p class="fst-italic">
+               We at RV college of Engineering cater to 1 lakh students everyday
+              </p>
+              <ul>
+                <li> Working days: Monday-Saturday</li>
+                <li>Working hours: 9:00AM to 8:00PM</li>
+              </ul>
+            </div>
+          </div>
         </div>
 
+      </div>
+    </section><!-- End About Section -->
+
     </main>
-    <!-- <footer style="
-    padding-top: 0px;
-    margin-top: 0px;
-">
-      <div class="foot-con">
-        <div class="fo-cont-1">
-            Mingos
-        </div>
-        <div class="fo-cont-2">
-          <a class="ext-link" href="#">Home</a> |
-            <a class="ext-link" href="#">About us</a> |
-              <a class="ext-link" href="#">Privacy Policy</a> |
-                <a class="ext-link" href="#">Terms & Conditions</a>
-        </div>
-        <div class="fo-cont-3">
-          Department: ISE<br />
-Mysuru Road<br />
-RVCE<br />
-Bangalore
-        </div>
-      </div><hr style="background-color: grey;margin-top:0px;"/><br />
-      Made by Nisarga <b>Santhosh</b> Keerthana<br />
-      ©<script type='text/javascript'>var creditsyear = new Date();document.write(creditsyear.getFullYear());</script> <a class="ext-link" href="/"><b>Mingos</b></a> All Rights Reserved | RVCE -->
       <div class="footer">
          <div id="button"></div>
        <div id="container">
@@ -298,7 +538,6 @@ Bangalore
        <div class="footer_center">
              <h3 style="color:white;">Mingos</h3>
              <p style="color:white;">Made by Santosh | Nisarga | Keerthana🍔🍟🍕</p>
-       </div>
        </div>
        </div>
        </div>
